force-app/main/default/objects/MarketIntelligenceDetail__c/MarketIntelligenceDetail__c.object-meta.xml
<CustomObject>
    <label>Market Intelligence Detail</label>
    <nameField>
        <displayFormat>MID{000000}</displayFormat>
        <label>Market Intelligence Detail  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Intelligence Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>