force-app/main/default/objects/MarketIntelligenceDetail__c/fields/AnnualVolume__c.field-meta.xml
<CustomField>
    <fullName>AnnualVolume__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is created for cargill Project as a part of Sprint-3 Build</description>
    <label>Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>