force-app/main/default/objects/MarketIntelligenceDetail__c/fields/CaptiveDemand__c.field-meta.xml
<CustomField>
    <fullName>CaptiveDemand__c</fullName>
    <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
    <label>Captive Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>