force-app/main/default/objects/MarketIntelligenceDetail__c/fields/IsCargillSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsCargillSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, supplier will be Cargill.</description>
    <label>Is Cargill Supplier?</label>
    <type>Checkbox</type>
</CustomField>