force-app/main/default/objects/MarketIntelligenceDetail__c/fields/MarketIntelligence__c.field-meta.xml
<CustomField>
    <fullName>MarketIntelligence__c</fullName>
    <label>Market Intelligence</label>
    <referenceTo>MarketIntelligence__c</referenceTo>
    <relationshipLabel>Market Intelligence Details</relationshipLabel>
    <relationshipName>Market_Intelligence_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>