force-app/main/default/objects/MarketIntelligenceDetail__c/fields/ShiptoCountry__c.field-meta.xml
<CustomField>
    <fullName>ShiptoCountry__c</fullName>
    <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
    <formula>IF( ISBLANK( ShipToName__r.BillingCountry ) , ShipToName__r.ShippingCountry , ShipToName__r.BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to Country</label>
    <type>Text</type>
</CustomField>