force-app/main/default/objects/MarketIntelligenceDetail__c/fields/ShipToName__c.field-meta.xml
<CustomField>
    <fullName>ShipToName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
    <label>Ship To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Intelligence Details (Ship To Name)</relationshipLabel>
    <relationshipName>Market_Intelligence_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>