force-app/main/default/objects/MarketIntelligenceDetail__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Intelligence Details</relationshipLabel>
    <relationshipName>Market_Intelligence_Details</relationshipName>
    <type>Lookup</type>
</CustomField>