force-app/main/default/objects/MarketIntelligenceDetail__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <description>This field stores the Parent Market Intelligence UnitofMeasure Value</description>
    <formula>TEXT(MarketIntelligence__r.UnitofMeasure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>